# MFSDA_Python

./: .gitignore  CMakeLists.txt  MFSDA_createShapes  MFSDA_run  MFSDA_run.py  MFSDA_run.xml  MFSDA_run_script.py  MFSDA_stat.py  README.md  stat_kernel.py  stat_lpks.py  stat_lpks_pre_bw.py
MFSDA/: CMakeLists.txt  MFSDA.py  MFSDA_createShapes.py  MFSDA_createShapes.xml  MFSDA_run  MFSDA_run.py  MFSDA_run.xml
MFSDA/Resources/Libraries/: MFSDA_run_script.py  MFSDA_selectVariablesPCA.py  MFSDA_stat.py  stat_bstrp_pvalue.py  stat_gap.py  stat_lpks_wb1.py  stat_lpks_wob.py  stat_read_x.py  stat_sif.py  stat_wald_ht.py
MFSDA/Resources/UI/: MFSDA.ui
MFSDA/Testing/: 01_Left_aligned.vtk  02_Right_aligned.vtk  03_Right_aligned.vtk  04_Right_aligned.vtk  06_Right_aligned.vtk  07_Left_aligned.vtk  08_Right_aligned.vtk  10_Left_aligned.vtk  12_Left_aligned.vtk  14_Right_aligned.vtk  21_Left_aligned.vtk  22_Right_aligned.vtk  24_Left_aligned.vtk  29_Left_aligned.vtk  36_Left_aligned.vtk  38_Left_aligned.vtk  39_Right_aligned.vtk  ALLM_aligned.vtk  shapeData.txt  temp.txt
MFSDA/Testing/TEST/: covariate  covariate.csv  covariateType.csv
MFSDA/Testing/output/: efit.json  out.vtk  output.csv  pvalues.json
MFSDA/lib/: createShapes.py
Resources/UI/: MFSDA.ui
src/: MFSDA.py
src/lib/: MFSDA_run.py  createShapes.py
